zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__move_pane_with_pane_id_in_direction_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 7411
expression: "format!(\"{:#?}\", screen_instruction)"
---
Some(
    MovePaneWithPaneIdInDirection(
        Terminal(
            2,
        ),
        Left,
    ),
)
