zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__move_pane_with_pane_id_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 7340
expression: "format!(\"{:#?}\", screen_instruction)"
---
Some(
    MovePaneWithPaneId(
        Terminal(
            2,
        ),
    ),
)
